--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 	<title>
-		Online Library Management System
+		Dogs
 	</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
